fix whitespace

--- a/src/app/user/search-bar/search-bar.component.scss
+++ b/src/app/user/search-bar/search-bar.component.scss
@@ -14,11 +14,11 @@
             border: 1px solid;
             border-radius: 2em;
             padding: 5px 9px 5px 35px;
+            margin-left: -30px;
         }
 
         .search-icon {
             position: relative;
-            left: 30px;
         }
         
         button {
